-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.6.0
-
None
-
Win7x64, MSVC14, cmake3.10
In my cmake project I have the libtiff c-library as a subdirectory. With the recent release of QtCreator 4.6.0 I tried the clang static analyzer and it produces a ton of errors for the c-files of libtiff:
error: invalid argument '-std=c++14' not allowed with 'C'
which result in errorcode 1.
The use of -std=c++14 is seems to be wrong here. However even for the cpp-files it is used, but that is also wrong as I used set(CMAKE_CXX_STANDARD 17) in my cmakelists.txt to set c++17. MSVC does recognize it and compiles the code just fine.
clang on the other hand does also report errors for c++17 features.
For Gerrit Dashboard: QTCREATORBUG-20198 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
227855,4 | CppTools: Fix MSVC toolchain flags for C-files | 4.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |