CppTools: Fix MSVC toolchain flags for C-files

In case of C-header or C-source files the MSVC
language version was not switched to C.
Fixes static analyzer runs for C files.

Task-number: QTCREATORBUG-20198
Change-Id: I1da31a1048b7c258642cf00f5084681f5d384ee6
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>