src/plugins/cpptools/compileroptionsbuilder.h
@@ -96,6 +96,7 @@ private:
     QStringList m_options;
     QString m_clangVersion;
     QString m_clangResourceDirectory;
+    ProjectPart::LanguageVersion m_languageVersion;
 };
 
 template<class T>
